scripts/generic_fixtures/golden/gf6_overload_conflict.golden
[compile] rc=1
error: function 'g' has overload conflicts
 ==> <WORK>/gf6_overload_conflict.cj:5:6:
  |
5 | func g<T>(x: T): Int64 where T <: B { let _ = x; return 2 }
  |      ^
  |
  # note: generic constraints are not involved in the overloading
note: conflict with the declaration
 ==> <WORK>/gf6_overload_conflict.cj:4:6:
  |
4 | func g<T>(x: T): Int64 where T <: A { let _ = x; return 1 }
  |      ^
  |

1 error generated, 1 error printed.
